--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   ],
   "author": "Your Name",
   "license": "MIT",
-  "dependencies": {},
+  "dependencies": {
+    "node-fetch": "^2.6.7"
+  },
   "devDependencies": {},
   "engines": {
     "node": ">=18.0.0"
