--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,7 @@
 {
   "version": 2,
-  "buildCommand": "echo 'No build required'",
+  "buildCommand": "echo 'Static site - no build required'",
   "outputDirectory": ".",
-  "functions": {
-    "api/*.js": {
-      "runtime": "nodejs18.x"
-    }
-  },
   "routes": [
     {
       "src": "/api/(.*)",
