--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
   "version": 2,
-  "buildCommand": "echo 'No build required'",
+ all t  "buildCommand": "echo 'No build required'",
   "outputDirectory": "."
 }
