--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,9 @@
 {
   "version": 2,
-  "buildCommand": "echo 'No build required'",
-  "outputDirectory": "."
+  "buildCommand": "echo \"No build required\"",
+  "outputDirectory": ".",
+  "routes": [
+    { "src": "/$", "dest": "/index.html" },
+    { "src": "/index.html", "dest": "/index.html" }
+  ]
 }
