REMOVE ALL FALLBACKS - Live data only with CI guards
 COMPLETED REQUIREMENTS:

1. Remove ALL fallback data:
   - Delete minimal fallback from symbol master (throws error if no symbols)
   - Remove hardcoded mega-cap aliases that bias matching
   - Remove all fallback provider references
   - No synthetic data anywhere in production

2. Live symbol master (full universe):
   - Loads from live APIs (FMP + Finnhub)
   - Throws error if no symbols loaded (no fallback)
   - Logs comprehensive health metrics
   - Covers full US market (NASDAQ/NYSE/AMEX + ETFs)

3. Fixed ticker extraction:
   - Uses live symbol master only
   - No mega-cap bias in matching
   - Works across all market caps
   - Proper case sensitivity handling

4. Full-universe scanners:
   - Uses complete symbol master
   - Progress tracking and logging
   - Handles rate limits gracefully
   - No synthetic data

5. News impact metrics:
   - Added news impact calculation
   - Placeholder for price impact tracking
   - Ready for live implementation

6. UI health indicators:
   - LIVE/DEGRADED/OFFLINE status chips
   - Provider error tracking
   - Honest empty states

7. CI guards:
   - Script to prevent fallback code
   - Build fails if fallback references found
   - Protects against regression

OBSERVABILITY LOGGING:
- news_live_items=N providers_ok=[...] providers_err=[...]
- tickers_resolved=N unmatched_titles=M
- scanner_universe=N processed=X rate_limited=true/false

NO FALLBACK DATA ANYWHERE - 100% LIVE OR DEGRADED STATES

--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.html",
   "scripts": {
     "start": "vercel dev",
-    "build": "echo 'No build step required'",
-    "deploy": "vercel --prod"
+    "build": "node scripts/check-fallbacks.js && echo 'No build step required'",
+    "deploy": "vercel --prod",
+    "check-fallbacks": "node scripts/check-fallbacks.js"
   },
   "keywords": [
     "financial",
