expose API keys for client-side access and add diagnostics
- Update WebSocket quotes to use NEXT_PUBLIC_FINNHUB_KEY directly
- Add environment variable diagnostics to StatusBar
- Update vercel.json to expose public environment variables
- Add client-side API key availability testing
- StatusBar now shows API key status (/) for FH, FMP, AV
- WebSocket connects directly to Finnhub without server proxy
- All client-side code now uses public environment variables
- Server-side APIs continue using private environment variables
- Ready for real data with proper API key exposure

--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,14 @@
   "version": 2,
   "buildCommand": "echo \"No build required\"",
   "outputDirectory": ".",
+  "env": {
+    "NEXT_PUBLIC_FINNHUB_KEY": "@finnhub_key",
+    "NEXT_PUBLIC_FMP_KEY": "@fmp_key", 
+    "NEXT_PUBLIC_ALPHAVANTAGE_KEY": "@alphavantage_key",
+    "FINNHUB_KEY": "@finnhub_key",
+    "FMP_KEY": "@fmp_key",
+    "ALPHAVANTAGE_KEY": "@alphavantage_key"
+  },
   "routes": [
     { "src": "/$", "dest": "/index.html" },
     { "src": "/index.html", "dest": "/index.html" }
