--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
-﻿{
+{
   "name": "financial-news-dashboard",
-  "version": "1.0.0",
-  "description": "Professional financial news dashboard with real-time data, charts, and scanners - FOR ENTERTAINMENT PURPOSES ONLY",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -10,24 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "13.4.19",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "5.0.4",
-    "@types/node": "18.15.11",
-    "@types/react": "18.2.0",
-    "@types/react-dom": "18.2.0",
-    "tailwindcss": "3.3.3",
-    "postcss": "8.4.24",
-    "autoprefixer": "10.4.14",
-    "lucide-react": "0.263.1",
-    "rss-parser": "3.13.0"
+    "next": "14.2.5",
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
-    "eslint": "8.42.0",
-    "eslint-config-next": "13.4.19"
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.2.5",
+    "typescript": "5.5.4",
+    "@types/node": "20.12.12",
+    "@types/react": "18.3.3",
+    "tailwindcss": "3.4.7",
+    "postcss": "8.4.35",
+    "autoprefixer": "10.4.17"
   },
   "engines": {
-    "node": ">=18.0.0"
-  }
+    "node": ">=18.17.0"
+  },
+  "packageManager": "pnpm@8.15.5"
 }
